Fix compilation errors: replace Lombok with manual code and fix OpenSearch API usage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ opensearch:
   host: localhost
   port: 9200
   scheme: http
-  username: admin
-  password: Admin@123
+  username: 
+  password:
 
 logging:
   level:
